force-app/main/default/objects/Branch__c/fields/Branch_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Branch_Street_Address__c</fullName>
    <label>Branch Street Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>