force-app/main/default/objects/Branch__c/fields/Branch_Zip__c.field-meta.xml
<CustomField>
    <fullName>Branch_Zip__c</fullName>
    <label>Branch Zip</label>
    <length>15</length>
    <type>Text</type>
</CustomField>