force-app/main/default/objects/Branch__c/fields/External_id__c.field-meta.xml
<CustomField>
    <fullName>External_id__c</fullName>
    <label>External__id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>